--- a/gallary.html
+++ b/gallary.html
@@ -20,8 +20,8 @@
 
         <div class="gallary">
 
-            <div class="h-stretch"><img src="image/1.jpg" alt=""></div>
-            <div class="v-stretch"><img src="image/2.jpg" alt=""></div>
+            <div class="h-stretch"><img src="Image/1.jpg" alt=""></div>
+            <div class="v-stretch"><img src="Image/2.jpg" alt=""></div>
             <div class="h-stretch"><img src="image/3.jpg" alt=""></div>
             <div><img src="image/4.jpg" alt=""></div>
             <div><img src="image/5.jpg" alt=""></div>
