--- a/gallary.html
+++ b/gallary.html
@@ -28,7 +28,7 @@
             <div class="v-stretch"><img src="image/6.jpg" alt=""></div>
             <div class="big-stretch"><img src="image/7.jpg" alt=""></div>
             <div><img src="image/8.jpg" alt=""></div>
-            <div class="h-stretch"><img src="image/9.jpg" alt=""></div>
+            <div class="h-stretch"><img src="Image/9.jpg" alt=""></div>
             <div><img src="image/22.jpg" alt=""></div>
             <div class="v-stretch"><img src="image/23.jpg" alt=""></div>
             <div class="big-stretch"><img src="image/24.jpg" alt=""></div>
