--- a/gallary.html
+++ b/gallary.html
@@ -25,19 +25,19 @@
             <div class="h-stretch"><img src="image/3.jpg" alt=""></div>
             <div><img src="image/4.jpg" alt=""></div>
             <div><img src="image/5.jpg" alt=""></div>
-            <div class="v-stretch"><img src="image/6.jpg" alt=""></div>
-            <div class="big-stretch"><img src="image/7.jpg" alt=""></div>
+            <div class="v-stretch"><img src="Image/6.jpg" alt=""></div>
+            <div class="big-stretch"><img src="Image/7.jpg" alt=""></div>
             <div><img src="image/8.jpg" alt=""></div>
             <div class="h-stretch"><img src="Image/9.jpg" alt=""></div>
             <div><img src="image/22.jpg" alt=""></div>
             <div class="v-stretch"><img src="image/23.jpg" alt=""></div>
             <div class="big-stretch"><img src="image/24.jpg" alt=""></div>
-            <div><img src="image/25.jpg" alt=""></div>
-            <div><img src="image/26.jpg" alt=""></div>
-            <div><img src="image/7.jpg" alt=""></div>
-            <div class="big-stretch"><img src="image/22.jpg" alt=""></div>
-            <div class="v-stretch"><img src="image/4.jpg" alt=""></div>
-            <div class="h-stretch"><img src="image/8.jpg" alt=""></div>
+            <div><img src="Image/25.jpg" alt=""></div>
+            <div><img src="Image/26.jpg" alt=""></div>
+            <div><img src="Image/7.jpg" alt=""></div>
+            <div class="big-stretch"><img src="Image/22.jpg" alt=""></div>
+            <div class="v-stretch"><img src="Image/4.jpg" alt=""></div>
+            <div class="h-stretch"><img src="Image/8.jpg" alt=""></div>
             <div><img src="image/1.jpg" alt=""></div>
             <div><img src="image/9.jpg" alt=""></div>
             <div><img src="image/4.jpg" alt=""></div>
